--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 </button>
             
 
-<a class="navbar-brand" href="index.html"><img src="img/header_logo.png" alt=""></a>
+<a class="navbar-brand" href="index.html"><img src="img/header_logo.PNG" alt=""></a>
                     
 </div>
 
