--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
 
-<link rel="icon" href="img/logo_icon.png" type="image/x-icon" />
+<link rel="icon" href="img/logo_icon.PNG" type="image/x-icon" />
 
-<title> idk what i'm doing </title>
+<title> Allison Hung </title>
 
         
 
