--- a/index.html
+++ b/index.html
@@ -168,7 +168,10 @@
 					<p>I'm a senior at <a href="https://www.columbia.edu">Columbia University</a>. 
 					My current interests include host-pathogen interactions and synthetic biology. 
 					I made this to learn how to make websites but now this will probably my resume. 
-					I also have a <a href="https://microbe.home.blog">blog</a>. </p>
+					I also have a <a href="https://microbe.home.blog">blog</a>, and I help produce CU Bio Bytes, 
+					a synthetic biology podcast which you can download 
+					<a href="https://podcasts.apple.com/us/podcast/cu-bio-bytes/id1456405920">here</a>.
+					</p>
                                 
 					<div class="person_information">
                                     
